# job-match

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.airflow  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sample_profile.json
.claude/skills/: add-source.md  build.md  check.md  db-shell.md  extract.md  migrate.md  review.md  run-source.md  test.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 977bec5ba028_initial_schema.py  a1b2c3d4e5f6_add_account_fields.py  b8d24a7c9e15_profiles_surrogate_uuid_pk_username.py  c1a2b3d4e5f6_backfill_default_password.py  c7d8e9f0a1b2_enrich_countries_add_profile_country.py  d46cfbb8bf63_add_saved_searches_table.py  e5f6a7b8c9d0_add_match_count_to_saved_searches.py  f3c8a51e0b74_normalize_profiles_schema.py  f8e7d6c5b4a3_add_countries_table.py  fb9016b86fde_add_reset_token_to_profiles.py
dags/: job_match.py
docs/: 00-overview.md  job_match_pipeline.docx  phase-1-recoleccion.md  phase-2-extraccion.md  phase-3-matching.md  phase-4-api-perfil.md  phase-5-orquestacion.md  phase-6-readme-demo.md
docs/frontend/: 00-overview.md  phase-1-bootstrap.md  phase-2-api-client.md  phase-3-matches-list.md  phase-4-match-detail.md  phase-5-profile-form.md  phase-6-refresh-polish.md  phase-7-build-fastapi.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/claude_design/: JobMatch.dc.html
frontend/design/: JobMatch.dc.html
frontend/public/: sample_profile.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  FiltersSidebar.tsx  Gate.tsx  Header.tsx  MatchCard.tsx  MatchDetailDrawer.tsx  RawTextCollapsible.tsx  RequirementsPanel.tsx  ScoreBadge.tsx  SourceAttribution.tsx  SourceBadge.tsx  StackInput.tsx  StageStepper.tsx  StatusChip.tsx  VerdictPanel.tsx
frontend/src/hooks/: useNow.ts  useSearchFilters.ts  useTheme.ts
frontend/src/lib/: api.ts  format.ts  pipeline.ts  profile-context.tsx  profileStorage.ts  schemas.ts  score.ts  searchFilters.ts
frontend/src/pages/: MatchesList.tsx  ProfileForm.tsx  (+3 more)
nginx/: nginx.conf
observability/loki/: loki-config.yml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail-config.yml
src/extraction/: extractor.py  schema.py
src/infrastructure/: config.py  metrics.py  security.py
src/interfaces/: pipeline.py
src/sources/: base.py  himalayas.py  remotive.py
src/storage/: database.py  models.py
tests/: conftest.py  test_extractor.py  test_sources.py  test_storage.py
tests/application/: test_collect_jobs.py  test_confirm_password_reset.py  test_embed_jobs.py  test_extract_job_requirements.py  test_pipeline.py  test_request_password_reset.py  test_score_profile.py
tests/dags/: test_dag_loads.py
tests/domain/: test_embedding_text.py  test_id_hasher.py  test_job_requirements.py  test_match_filters.py  test_profile_form.py  test_verdict.py
tests/fixtures/: adzuna_sample.json  arbeitnow_sample.json  himalayas_sample.json  jobicy_sample.json  jooble_sample.json  profile_smoke.json  remoteok_sample.json  remotive_sample.json
tests/infrastructure/: test_security.py
(+88 files in other folders)
