[project]
name = "job-match-pipeline"
version = "0.1.0"
description = "Recolección, extracción y scoring de ofertas de empleo según un perfil."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Daniel Caso", email = "daniel.caso.quintanilla@gmail.com" }]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "beautifulsoup4>=4.12",
    "tenacity>=8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
