[project]
name = "job-match-pipeline"
version = "0.1.0"
description = "Recolección, extracción y scoring de ofertas de empleo según un perfil."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Daniel Caso", email = "daniel.caso.quintanilla@gmail.com" }]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "beautifulsoup4>=4.12",
    "tenacity>=8.2",
    "google-genai>=1.0",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "alembic>=1.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sentence-transformers>=2.7",
    "numpy>=1.26",
    "torch>=2.0",
    "prometheus-fastapi-instrumentator>=6.1",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.uv]
package = false

# Force the CPU build of PyTorch (sentence-transformers' main dep). The default
# wheels bundle CUDA libs which add ~5 GB to the image and are useless for
# inference on bge-small-en-v1.5 (we run on CPU).
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
